--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,80 @@
   <title>Quiz Game</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="../src/styles/index.css">
 </head>
 
 <body>
+  <main>
+    <form action="submit" method="post" id="frm_quiz">
+      <div class="row d-flex justify-content-center mt-lg-5">
+        <div class="col-6">
+          <div class="row d-flex justify-content-center">
+            <div id="firstSec" class="col-12">
+              <section class="welcome-view view mt-4">
+                <img src="../src/assets/welcome-view.png" class="img-fluid" alt="Responsive image">
+                <h1 class="mt-4 text-center">Trivia Quiz Game</h1>
+                <h4 class="mt-4 text-center">How much you know about things? prove it with this little fun quiz game!
+                  </h3>
+              </section>
+            </div>
+
+            <div id="secondSec" class="col-12">
+              <section class="form-view view mt-4">
+                <div class="form-group mt-4">
+                  <label for="customRange2" class="form-label">Questions limit</label>
+                  <input id="limit" type="range" class="form-range " min="1" max="20" value="1"
+                    oninput="this.nextElementSibling.value = this.value">
+                  <output>1</output>
+                </div>
+
+                <div class="form-group mt-4">
+                  <label for="exampleFormControlSelect1">Difficulty</label>
+                  <select class="form-control shadow border-left-primary" name="difficulty" id="difficulty" required>
+                    <option selected disabled>Choose your difficulty</option>
+                    <option value="easy">Easy</option>
+                    <option value="medium">Medium</option>
+                    <option value="hard">Hard</option>
+                  </select>
+                </div>
+
+                <div class="form-group mt-4">
+                  <label for="exampleFormControlSelect1">Categories</label>
+                  <select class="form-control shadow border-left-primary" name="category" id="category" required>
+
+                  </select>
+                </div>
+
+                <div class="row justify-content-center">
+                  <div class="col-12"><button id="btn-start" type="button"
+                      class="btn btn-success w-100 mt-4">Start</button>
+                  </div>
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+
+    <div class="row d-flex justify-content-around align-items-center rounded" style="height:700px">
+      <div class="col-6 row-col-2 bg-dark text-light rounded">
+        <h4 id="question" class="p-2 text-center"></h4>
+        <div class="row">
+
+          <div class="col-12 p-2 text-center" id="btn-container">
+
+          </div>
 
 
+        </div>
+      </div>
+
+
+    </div>
+
+
+  </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -23,6 +92,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
+  <script type="module" src="../src/index.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </body>
 
 </html>
