--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
               <section class="welcome-view view mt-4">
                 <img src="../src/assets/welcome-view.png" class="img-fluid" alt="Responsive image">
                 <h1 class="mt-4 text-center">Trivia Quiz Game</h1>
-                <h4 class="mt-4 text-center">How much you know about things? prove it with this little fun quiz game!
+                <h4 class="mt-4 text-center">How much you know about life? prove it with this little fun quiz game!
                   </h3>
               </section>
             </div>
@@ -66,7 +66,7 @@
 
     <div class="row d-flex justify-content-around align-items-center rounded" style="height:700px">
       <div class="col-6 row-col-2 bg-dark text-light rounded">
-        <h4 id="question" class="p-2 text-center"></h4>
+        <h4 id="question" class="p-2 text-center p-4"></h4>
         <div class="row">
 
           <div class="col-12 p-2 text-center" id="btn-container">
