--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <form action="submit" method="post" id="frm_quiz">
       <div class="row d-flex justify-content-center mt-lg-5">
-        <div class="col-6">
+        <div class="col-6 main-view">
           <div class="row d-flex justify-content-center">
             <div id="firstSec" class="col-12">
               <section class="welcome-view view mt-4">
@@ -64,8 +64,8 @@
       </div>
     </form>
 
-    <div class="row d-flex justify-content-around align-items-center rounded" style="height:700px">
-      <div class="col-6 row-col-2 bg-dark text-light rounded">
+    <div id="gameSection" class="row d-flex justify-content-around align-items-center rounded" style="height:700px">
+      <div class="col-6 row-col-2 bg-dark text-light rounded question-view">
         <h4 id="question" class="p-2 text-center p-4"></h4>
         <div class="row">
 
