--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,15 @@
   <title>Quiz Game</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./src/styles/index.css">
+  <link rel="stylesheet" href="../src/styles/index.css">
+  <script async type="module" src="../src/index.js"></script>
 </head>
 
-<body>
+<body class="fs-4 text">
   <main>
     <form action="submit" method="post" id="frm_quiz">
-      <div class="row d-flex justify-content-center mt-lg-5">
-        <div class="col-6 main-view">
+      <div class="row d-flex justify-content-center mt-5">
+        <div class=" main-view p-5">
           <div class="row d-flex justify-content-center">
             <div id="firstSec" class="col-12">
               <section class="welcome-view view mt-4">
@@ -38,8 +39,8 @@
                 <div class="form-group mt-4">
                   <label for="exampleFormControlSelect1">Difficulty</label>
                   <select class="form-control shadow border-left-primary" name="difficulty" id="difficulty" required>
-                    <option selected disabled>Choose your difficulty</option>
-                    <option value="easy">Easy</option>
+                    <option selected disabled required>Choose your difficulty</option>
+                    <option value="easy" required>Easy</option>
                     <option value="medium">Medium</option>
                     <option value="hard">Hard</option>
                   </select>
@@ -64,25 +65,29 @@
       </div>
     </form>
 
-    <div id="gameSection" class="row d-flex justify-content-around align-items-center rounded" style="height:700px">
-      <div class="col-6 row-col-2 bg-dark text-light rounded question-view">
-        <h4 id="question" class="p-2 text-center p-4"></h4>
-        <div class="row">
+    <div id="gameSection" class="row justify-content-center align-items-center rounded p-1 m-4 inactive"
+      style="height:600px">
+      <div class="row-col-2 bg-dark text-light rounded question-view">
+        <div class="progress mb-5">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
+            style="width: 100%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10">
+            <div id="countdown">10 seconds!</div>
+          </div>
+        </div>
 
+        <h4 id="question" class="p-2 text-center p-4"></h4>
+
+        <div class="row">
           <div class="col-12 p-2 text-center" id="btn-container">
 
           </div>
-
-
         </div>
+
       </div>
-
-
     </div>
 
 
   </main>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
@@ -92,7 +97,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
-  <script type="module" src="./src/index.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 </body>
 
